# maps-scraper

./: .gitignore  README.md  places_data.json  pyproject.toml
src/maps_scraper/: config.py  drivers.py  entities.py  main.py
