[tool.poetry]
name = "maps-scraper"
version = "0.0.1"
description = "Google Maps Scraper using Selenium"
authors = ["Le Trong Linh <linhpksw@gmail.com>"]
packages = [
    { include = "maps_scraper", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
webdriver-manager = "^3.5.2"
selenium = "^4.0.0"
pydantic = "^1.8.2"
rich = "^10.14.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
python-dotenv = "^0.19.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
extra_standard_library = ["pytest", "toml", "click"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
